Bug 1072564 - Incrementalize sweeping of type information, r=billm.